# Robot-arm-BEIHANG-SE

ROS-ROBOT-2026-BEIHANG-UNIVERSITY/: .gitignore  README.md
ROS-ROBOT-2026-BEIHANG-UNIVERSITY/docs/: SDP-软件开发计划_5_.doc  周二第7组-软件需求规格说明书-1.0.doc
ROS-ROBOT-2026-BEIHANG-UNIVERSITY/src/walle_core/: package.xml
ROS-ROBOT-2026-BEIHANG-UNIVERSITY/src/walle_msgs/: CMakeLists.txt  package.xml
devel/: .catkin
devel/lib/learning_communication/: publisher  subscriber
devel/lib/pkgconfig/: learning_communication.pc  walle_core.pc  walle_msgs.pc  waterplus_map_tools.pc  wpb_home_behaviors.pc  wpb_home_bringup.pc  wpb_home_python.pc  wpb_home_python3.pc  wpb_home_remote.pc  wpb_home_tutorials.pc  wpbh_local_planner.pc  wpr_simulation.pc
devel/lib/walle_core/: grasp_verify_node.py  real_fsm_node.py  real_zone_manager.py  vision_simulator.py
devel/lib/waterplus_map_tools/: charger_get_position  pose_navi_server  set_pose_from_waypoint  wp_edit_node  wp_manager  wp_nav_odom_report  wp_nav_remote  wp_nav_test  wp_navi_server  wp_saver  wp_set_pose
devel/lib/wpb_home_behaviors/: wpb_home_face_detect_3d  wpb_home_grab_action  wpb_home_grab_server  wpb_home_objects_3d  wpb_home_pass_server  wpb_home_place_action
devel/lib/wpb_home_bringup/: wpb_home_calibrate_velocity  wpb_home_core  wpb_home_imu_tf  wpb_home_js_vel  wpb_home_motor_encoder  wpb_home_test_mani  wpb_home_test_motors
devel/lib/wpb_home_tutorials/: wpb_home_behavior_node  wpb_home_capture_image  wpb_home_cruise  wpb_home_face_detect  wpb_home_face_node  wpb_home_follow  wpb_home_grab_client  wpb_home_grab_middle  wpb_home_grab_node  wpb_home_grab_object  wpb_home_image_node  wpb_home_imu_turn  wpb_home_joystick_demo  wpb_home_lidar_behavior  wpb_home_lidar_data  wpb_home_lidar_obstacle  wpb_home_mani_ctrl  wpb_home_obj_detect  wpb_home_obj_node  wpb_home_plane_detect  wpb_home_pointcloud_cluster  wpb_home_pointcloud_node  wpb_home_serve_drinks  wpb_home_simple_goal  wpb_home_sound_local  wpb_home_speak  wpb_home_speech_recognition  wpb_home_sr_xfyun  wpb_home_velocity_control  wpb_home_voice_cmd
devel/lib/wpr_simulation/: ball_random_move  demo_cv_face_detect  demo_cv_follow  demo_cv_hsv  demo_cv_image  wpr1_sim  (+9 more)
libfreenect2/: CMakeCache.txt  Makefile  cmake_install.cmake
libfreenect2/doc/: Makefile  cmake_install.cmake
libfreenect2/examples/: Makefile  cmake_install.cmake
robot-tools-rec/rqt_task_dashboard/: README.md  package.xml  setup.py
robot-tools-rec/walle_gazebo_assets/: README.md  package.xml
robot-tools-rec/walle_gazebo_assets/launch/: spawn_sorting_cubes.launch  walle_circumstances_with_boxes.launch
robot-tools-rec/walle_web_console/: CMakeLists.txt  README.md
robot-tools-rec/walle_web_console/launch/: web_ui.launch
robot-tools-rec/walle_web_console/scripts/: web_server.py
robot-tools-rec/walle_web_console/web/: index.html
src/: walle_core  walle_msgs
src/learning_communication/: CMakeLists.txt
src/rqt_task_dashboard/: CMakeLists.txt  package.xml  plugin.xml
src/rqt_task_dashboard/launch/: task_dashboard.launch  web_ui.launch
src/rqt_task_dashboard/models/cubes/: red_cube.sdf
src/rqt_task_dashboard/scripts/: rqt_task_dashboard  vision_compress_node.py
src/walle_core/: CMakeLists.txt
src/walle_gazebo_assets/: CMakeLists.txt  README.md
src/walle_web_console/: package.xml
src/walle_web_console/launch/: web_ui.launch
src/walle_web_console/web/css/: style.css
src/walle_web_console/web/js/: app.js
src/wpr_simulation/: CMakeLists.txt  package.xml
(+93 files in other folders)
