<?xml version="1.0"?>
<package format="2">
  <name>walle_gazebo_assets</name>
  <version>0.1.0</version>
  <description>Gazebo sorting scene assets (colored cubes) for walle_core simulation.</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>wpr_simulation</exec_depend>
  <exec_depend>walle_core</exec_depend>
</package>
