<?xml version="1.0"?>
<package format="2">
  <name>walle_web_console</name>
  <version>0.1.0</version>
  <description>Browser dashboard for walle_core (rosbridge + static web UI).</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>walle_core</exec_depend>
</package>
